Disallow selectors with qualifying element types

--- a/scss/_base_forms-range.scss
+++ b/scss/_base_forms-range.scss
@@ -7,6 +7,7 @@
   $track-border: $track-border-size solid $color-mid-light;
   $track-radius: 2px;
 
+  // stylelint-disable-next-line selector-no-qualifying-type
   input[type='range'] {
     // stylelint-disable property-no-vendor-prefix
     -webkit-appearance: none;
