--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -205,6 +205,7 @@ $box-offsets-top: (
   [type='checkbox'] {
     @extend %vf-tick-elements;
 
+    // stylelint-disable selector-no-qualifying-type
     & + label {
       // container
       &::before {
@@ -312,6 +313,7 @@ $box-offsets-top: (
         }
       }
     }
+    // stylelint-enable selector-no-qualifying-type
 
     &:checked {
       @extend %checked;
@@ -323,6 +325,7 @@ $box-offsets-top: (
     $inner-circle-diameter: 0.375rem;
     $circle-offset-top: 0.5 * ($box-size - $inner-circle-diameter);
 
+    // stylelint-disable selector-no-qualifying-type
     & + label {
       &::before,
       &::after {
@@ -424,6 +427,7 @@ $box-offsets-top: (
         }
       }
     }
+    // stylelint-enable selector-no-qualifying-type
 
     &:checked {
       @extend %checked;
