--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -109,6 +109,7 @@
     padding-top: map-get($nudges, nudge--p);
     width: fit-content;
 
+    // stylelint-disable-next-line selector-no-qualifying-type
     &.is-required::after {
       color: $color-negative;
       content: '*';
@@ -192,6 +193,7 @@
       cursor: pointer;
     }
 
+    // stylelint-disable selector-no-qualifying-type
     &[multiple],
     &[size] {
       background-image: none;
@@ -204,6 +206,7 @@
         padding: $spv-inner--small $sph-inner--small;
       }
     }
+    // stylelint-enable selector-no-qualifying-type
   }
 
   // Textarea styles
