--- a/scss/_base_hr.scss
+++ b/scss/_base_hr.scss
@@ -21,7 +21,7 @@
       @include vf-hr-dark-theme;
     }
 
-    // sass-lint:disable-block no-qualifying-elements
+    // stylelint-disable-next-line selector-no-qualifying-type
     hr.is-light {
       @include vf-hr-light-theme;
     }
@@ -30,7 +30,7 @@
       @include vf-hr-light-theme;
     }
 
-    // sass-lint:disable-block no-qualifying-elements
+    // stylelint-disable-next-line selector-no-qualifying-type
     hr.is-dark {
       @include vf-hr-dark-theme;
     }
