--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -74,6 +74,7 @@
   .p-text--small {
     @extend %small-text;
 
+    // stylelint-disable-next-line selector-no-qualifying-type
     &.dense {
       margin-bottom: map-get($sp-after, small--dense) + map-get($line-heights, default-text) - map-get($line-heights, small) - map-get($nudges, nudge--small);
     }
@@ -146,6 +147,7 @@
     vertical-align: baseline;
   }
 
+  // stylelint-disable-next-line selector-no-qualifying-type
   abbr[title] {
     border-bottom: 0.1em dotted;
     cursor: help;
