--- a/scss/_patterns_table-expanding.scss
+++ b/scss/_patterns_table-expanding.scss
@@ -24,6 +24,7 @@
       }
     }
 
+    // stylelint-disable selector-no-qualifying-type
     th,
     td {
       align-items: flex-start;
@@ -51,5 +52,6 @@
         }
       }
     }
+    // stylelint-enable selector-no-qualifying-type
   }
 }
