--- a/scss/_patterns_table-mobile-card.scss
+++ b/scss/_patterns_table-mobile-card.scss
@@ -29,6 +29,7 @@
         width: calc(50% - #{0.5 * map-get($grid-gutter-widths, medium)});
       }
 
+      // stylelint-disable selector-no-qualifying-type
       td,
       tbody th {
         display: flex;
@@ -66,6 +67,7 @@
           justify-content: unset !important;
         }
       }
+      // stylelint-enable selector-no-qualifying-type
 
       // Styles contextual menus differently within mobile-card tables
       .p-contextual-menu {
