--- a/scss/_patterns_table-sortable.scss
+++ b/scss/_patterns_table-sortable.scss
@@ -20,6 +20,7 @@
   .p-table--sortable {
     table-layout: fixed;
 
+    // stylelint-disable selector-no-qualifying-type
     th[role='columnheader'] {
       &[aria-sort] {
         align-items: center;
@@ -43,5 +44,6 @@
         text-decoration: underline;
       }
     }
+    // stylelint-enable selector-no-qualifying-type
   }
 }
