--- a/templates/docs/examples/patterns/modal/default.html
+++ b/templates/docs/examples/patterns/modal/default.html
@@ -1,5 +1,5 @@
 {% extends "_layouts/examples.html" %}
-{% block title %}Modal{% endblock %}
+{% block title %}Modal / Default{% endblock %}
 
 {% block standalone_css %}patterns_modal{% endblock %}
 
