Extract modal script to shared file

--- a/templates/docs/examples/patterns/modal/default.html
+++ b/templates/docs/examples/patterns/modal/default.html
@@ -27,26 +27,6 @@
 </div>
 
 <script>
-/**
-  Toggles visibility of modal dialog.
-  @param {HTMLElement} modal Modal dialog to show or hide.
-*/
-function toggleModal(modal) {
-  if (modal && modal.classList.contains('p-modal')) {
-    if (modal.style.display === 'none') {
-      modal.style.display = 'flex';
-    } else {
-      modal.style.display = 'none';
-    }
-  }
-}
-
-// Add click handler for clicks on elements with aria-controls
-document.addEventListener('click', function(event) {
-  var targetControls = event.target.getAttribute('aria-controls');
-  if (targetControls) {
-    toggleModal(document.getElementById(targetControls));
-  }
-});
+  {% include 'docs/examples/patterns/modal/_script.js' %}
 </script>
 {% endblock %}
