Update spacing of the close button and the dialog

--- a/scss/_patterns_modal.scss
+++ b/scss/_patterns_modal.scss
@@ -24,6 +24,7 @@
 
     bottom: $spv-inner--large;
     left: $sph-inner--large;
+    margin-bottom: 0;
     max-height: calc(100% - #{2 * $spv-inner--large});
     max-width: $grid-max-width;
     overflow: scroll;
@@ -68,9 +69,12 @@
     border: 0;
     box-sizing: content-box;
     height: $icon-size;
-    margin: -#{$icon-size} -#{$icon-size} 0 0;
-    padding: $icon-size;
+    margin: 0;
+    padding: $spv-inner--small $sph-inner--small;
+    position: absolute;
+    right: 0;
     text-indent: -999em;
+    top: 0;
     width: $icon-size;
 
     &:focus {
