Properly use margin bottom on tables

--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -4,9 +4,9 @@
 @mixin vf-b-tables {
   table {
     border: 0;
-    border-bottom: $spv-outer--scaleable solid transparent;
     border-collapse: collapse;
     line-height: map-get($line-heights, default-text);
+    margin-bottom: $spv-outer--scaleable;
     overflow-x: auto;
     width: 100%;
 
