Fix the small screen side navigation

--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -12,7 +12,7 @@
     <div class="p-strip">
     <div class="row">
       <aside class="col-3">
-        <nav class="p-side-navigation">
+        <nav class="p-side-navigation" id="side-navigation">
           <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="side-navigation">
             Toggle side navigation
           </button>
