update focus on coloured butons to meet accessibility guidelines

--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -85,6 +85,8 @@
       $button-active-background-color: darken($color-positive, 15%),
       $button-active-border-color: darken($color-positive, 15%)
     );
+
+    @include vf-focus($color-focus-positive);
   }
 
   .p-button--positive {
@@ -107,6 +109,8 @@
       $button-active-background-color: darken($color-negative, 15%),
       $button-active-border-color: darken($color-negative, 15%)
     );
+
+    @include vf-focus($color-focus-negative);
   }
 
   .p-button--negative {
