update switch on state to use link blue; update thickness to match other focus states

--- a/scss/_patterns_switch.scss
+++ b/scss/_patterns_switch.scss
@@ -21,7 +21,7 @@ $knob-size: $sp-unit * 3;
       outline: none;
 
       + .p-switch__slider {
-        outline: 2px solid $color-focus;
+        outline: $bar-thickness solid $color-focus;
       }
     }
   }
@@ -29,7 +29,7 @@ $knob-size: $sp-unit * 3;
   .p-switch__slider {
     @extend %vf-has-round-corners;
 
-    background: linear-gradient(to right, $color-information 50%, $color-mid-light 50%);
+    background: linear-gradient(to right, $color-link 50%, $color-mid-light 50%);
     box-shadow: inset 0 2px 5px 0 transparentize($color-dark, 0.8);
     height: $knob-size;
     margin: $spv-nudge-compensation 0 $spv-outer--small-scaleable 0;
