fix leaking visited state colour in pagination buttons

--- a/scss/_patterns_pagination.scss
+++ b/scss/_patterns_pagination.scss
@@ -23,9 +23,11 @@
 
     &:hover,
     &:focus,
+    &:visited,
     &.is-active {
       background-color: darken($color-x-light, 10%);
       border-color: $color-mid;
+      color: $color-x-dark;
       text-decoration: none;
     }
 
