--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -191,7 +191,7 @@ $box-offsets-top: (
     }
 
     &:focus + label::before {
-      outline: 2px solid $color-focus;
+      outline: $bar-thickness solid $color-focus;
     }
 
     &[disabled],
@@ -436,8 +436,8 @@ $box-offsets-top: (
 
   %checked {
     & + label::before {
-      background-color: $color-information;
-      border-color: $color-information;
+      background-color: $color-link;
+      border-color: $color-link;
     }
   }
 
