--- a/scss/_patterns_modal.scss
+++ b/scss/_patterns_modal.scss
@@ -78,7 +78,7 @@
     width: $icon-size;
 
     &:focus {
-      outline: 2px solid $color-focus;
+      outline: $bar-thickness solid $color-focus;
     }
   }
 }
