update visited colour and focus outline color

--- a/scss/_base_links.scss
+++ b/scss/_base_links.scss
@@ -7,7 +7,7 @@
     text-decoration: none;
 
     &:focus {
-      outline: thin dotted $color-mid-light;
+      outline: thin dotted $color-focus;
     }
 
     &:hover {
@@ -16,7 +16,7 @@
     }
 
     &:visited {
-      color: darken($color-link, 10%);
+      color: $color-link-visited;
     }
   }
 }
