--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -21,7 +21,7 @@ $color-negative: #c7162b !default;
 $color-caution: #f99b11 !default;
 $color-positive: #0e8620 !default;
 
-$color-link: #0066cc !default;
+$color-link: #06c !default;
 $color-link-visited: #7d42b8 !default;
 $color-focus: #2e96ff !default;
 $color-focus-positive: #003008 !default;
