--- a/templates/docs/examples/base/forms/range.html
+++ b/templates/docs/examples/base/forms/range.html
@@ -10,7 +10,7 @@
 <script>
 var isWebkit =
   /Chrome/i.test(navigator.userAgent) || /Safari/i.test(navigator.userAgent);
-var PROGRESS_COLOUR = '#335280';
+var PROGRESS_COLOUR = '#06c';
 var EMPTY_COLOUR = '#fff';
 
 /**
