--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -26,6 +26,7 @@
 
     background-color: $color-x-light;
     border: 1px solid $color-mid;
+    border-radius: 0;
     box-shadow: inset 0 1px 1px $color-input-shadow;
     color: $color-dark;
     font-family: unquote($font-base-family);
