replace hardcoded values of the information colour with 06c

--- a/templates/docs/examples/patterns/slider/slider-input.html
+++ b/templates/docs/examples/patterns/slider/slider-input.html
@@ -18,7 +18,7 @@ var isWebkit =
   /Chrome/i.test(navigator.userAgent) || /Safari/i.test(navigator.userAgent);
 var isIE = /NET/i.test(navigator.userAgent);
 
-var PROGRESS_COLOUR = '#335280';
+var PROGRESS_COLOUR = '#06c';
 var EMPTY_COLOUR = '#fff';
 
 /**
