--- a/templates/docs/examples/patterns/side-navigation/discourse.html
+++ b/templates/docs/examples/patterns/side-navigation/discourse.html
@@ -21,6 +21,7 @@
           </button>
         </div>
 
+        <h3>Title</h3>
         <ul>
           <li>
             <a href="#">Title that is a link</a>
@@ -54,6 +55,7 @@
             <span>First level item that is not a link</span>
           </li>
         </ul>
+        <h3>Title</h3>
         <ul>
           <li>
             <span>Title that is not a link</span>
