Use existing placeholders for default text styles

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -262,9 +262,10 @@
       @extend %side-navigation__text;
 
       // reset heading styles
+      @extend %common-default-text-properties;
+      @extend %bold;
+
       font-size: map-get($base-font-sizes, base);
-      font-weight: $font-weight-bold;
-      line-height: 1.5rem;
       margin: 0;
     }
 
