--- a/templates/docs/examples/patterns/side-navigation/raw-html.html
+++ b/templates/docs/examples/patterns/side-navigation/raw-html.html
@@ -1,12 +1,12 @@
 {% extends "_layouts/examples.html" %}
-{% block title %}Side navigation / Discourse{% endblock %}
+{% block title %}Side navigation / Raw HTML{% endblock %}
 
 {% block standalone_css %}patterns_side-navigation{% endblock %}
 
 {% block content %}
 <div class="row">
   <div class="col-3">
-    <div class="p-side-navigation--discourse" id="drawer">
+    <div class="p-side-navigation--raw-html" id="drawer">
 
       <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
         Toggle side navigation
