Use raw HTML side navigation in documentation layout example

--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -42,7 +42,7 @@
 <div class="p-strip is-shallow">
   <div class="row">
     <aside class="col-3">
-      <nav class="p-side-navigation" id="drawer">
+      <nav class="p-side-navigation--raw-html" id="drawer">
         <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
           Toggle side navigation
         </button>
@@ -55,50 +55,48 @@
               Toggle side navigation
             </button>
           </div>
-          <ul class="p-side-navigation__list">
-            <li class="p-side-navigation__item--title">
-              <a class="p-side-navigation__link">Side navigation</a>
+          <h3>Side navigation</h3>
+          <ul>
+            <li>
+              <a>First page</a>
             </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">First page</a>
+            <li>
+              <a href="#">Second page</a>
             </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">Second page</a>
+            <li>
+              <a href="#">Third page</a>
             </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">Third page</a>
-            </li>
-            <li class="p-side-navigation__item">
-              <span class="p-side-navigation__text is-selected">Sub section</span>
-              <ul class="p-side-navigation__list">
-                <li class="p-side-navigation__item">
-                  <a class="p-side-navigation__link" href="#">Second level link</a>
+            <li>
+              <strong>Sub section</strong>
+              <ul>
+                <li>
+                  <a href="#">Second level link</a>
                 </li>
-                <li class="p-side-navigation__item ">
-                  <a class="p-side-navigation__link is-active" href="#">Current page</a>
+                <li>
+                  <a class="is-active" href="#">Current page</a>
                 </li>
-                <li class="p-side-navigation__item ">
-                  <a class="p-side-navigation__link" href="#">Another second level link</a>
+                <li>
+                  <a href="#">Another second level link</a>
                 </li>
               </ul>
             </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">Last page</a>
+            <li>
+              <a href="#">Last page</a>
             </li>
           </ul>
 
-          <ul class="p-side-navigation__list">
-            <li class="p-side-navigation__item--title">
-              <a class="p-side-navigation__link">Another group</a>
+          <ul>
+            <li>
+              <a href="#"><strong>Another group</strong></a>
             </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">First page</a>
+            <li>
+              <a href="#">First page</a>
             </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">Second page</a>
+            <li>
+              <a href="#">Second page</a>
             </li>
-            <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">Third page</a>
+            <li>
+              <a href="#">Third page</a>
             </li>
           </ul>
         </div>
