--- a/templates/docs/examples/templates/maas-docs.html
+++ b/templates/docs/examples/templates/maas-docs.html
@@ -143,7 +143,7 @@
             <a class="p-side-navigation__link" href="#">Commision machines</a>
           </li>
           <li class="p-side-navigation__item">
-            <span class="p-side-navigation__text is-selected">Testing</span>
+            <span class="p-side-navigation__text">Testing</span>
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item">
                 <a class="p-side-navigation__link" href="#">Hardware testing</a>
@@ -178,7 +178,7 @@
             <a class="p-side-navigation__link" href="#">MAAS 2.5 (and earlier) documentation</a>
           </li>
           <li class="p-side-navigation__item">
-            <a href="#" class="p-side-navigation__link is-selected">Upgrading MAAS</a>
+            <a href="#" class="p-side-navigation__link">Upgrading MAAS</a>
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item">
                 <a class="p-side-navigation__link" href="#">Upgrade from 2.3 to 2.4</a>
