Add no-js fallback to the side navigation

--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -13,17 +13,17 @@
     <div class="row">
       <aside class="col-3">
         <nav class="p-side-navigation" id="side-navigation-drawer">
-          <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="side-navigation-drawer">
+          <a href="#side-navigation-drawer" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="side-navigation-drawer">
             Toggle side navigation
-          </button>
+          </a>
 
           <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="side-navigation-drawer"></div>
 
           <div class="p-side-navigation__drawer">
             <div class="p-side-navigation__drawer-header">
-              <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="side-navigation-drawer">
+              <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="side-navigation-drawer">
                 Toggle side navigation
-              </button>
+              </a>
             </div>
 
             {% macro side_nav_item(url, title, label) -%}
