--- a/templates/docs/examples/patterns/side-navigation/_icons.html
+++ b/templates/docs/examples/patterns/side-navigation/_icons.html
@@ -1,7 +1,7 @@
 <div class="p-side-navigation--icons {% if is_dark %}is-dark{% endif %}" id="drawer-icons">
-  <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer-icons">
+  <a href="#drawer-icons" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer-icons">
     Toggle side navigation
-  </button>
+  </a>
 
   <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer-icons"></div>
 
@@ -10,9 +10,9 @@
   {% endif %}
   <div class="p-side-navigation__drawer" {% if is_dark %}style="background: #003b4e"{% endif %}>
     <div class="p-side-navigation__drawer-header" {% if is_dark %}style="background: #003b4e"{% endif %}>
-      <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer-icons">
+      <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer-icons">
         Toggle side navigation
-      </button>
+      </a>
     </div>
 
     <ul class="p-side-navigation__list">
