--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -43,17 +43,17 @@
   <div class="row">
     <aside class="col-3">
       <nav class="p-side-navigation--raw-html" id="drawer">
-        <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
+        <a href="#drawer" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
           Toggle side navigation
-        </button>
+        </a>
 
         <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
         <div class="p-side-navigation__drawer">
           <div class="p-side-navigation__drawer-header">
-            <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
+            <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
               Toggle side navigation
-            </button>
+            </a>
           </div>
           <h3>Side navigation</h3>
           <ul>
