adjust border color of interactive elements to meet AA on white and f7f7f7; small color refactor; update tick element example

--- a/scss/_base_forms-range.scss
+++ b/scss/_base_forms-range.scss
@@ -4,7 +4,7 @@
   $thumb-radius: $bar-thickness;
   $track-height: 5px;
   $track-border-size: 1px;
-  $track-border: $track-border-size solid $color-mid-light;
+  $track-border: $track-border-size solid $colors--light-theme--border-high-contrast;
   $track-radius: $bar-thickness;
 
   // stylelint-disable-next-line selector-no-qualifying-type
