--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -484,7 +484,7 @@ $box-offsets-top: (
   // color of the tick element background
     $color-tick-background,
   // color of the tick element border
-    $color-tick-border
+    $color-tick-border: $colors--light-theme--border-high-contrast
 ) {
   & + label {
     color: $color-tick-text;
