--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -26,6 +26,10 @@ $color-caution: #f99b11 !default;
 $color-positive: #0e8620 !default;
 $color-information: #24598f !default;
 
+$hover-darken-percentage: 10%;
+$active-darken-percentage: 15%;
+$disabled-element-opacity: 0.33;
+
 $color-label-validated: #006b75;
 
 $states: (
@@ -67,7 +71,7 @@ $colors--light-theme--background-highlight: #f7f7f7 !default;
 $colors--light-theme--background-overlay: transparentize($color-dark, 0.15) !default;
 
 $colors--light-theme--border-default: #cdcdcd !default;
-$colors--light-theme--border-high-contrast: #999 !default;
+$colors--light-theme--border-high-contrast: #717171 !default;
 $colors--light-theme--border-low-contrast: #e5e5e5 !default;
 
 // Dark theme
