--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -34,7 +34,7 @@
     &:disabled,
     &.is-disabled {
       cursor: not-allowed;
-      opacity: 0.5;
+      opacity: $disabled-element-opacity;
     }
 
     @media only screen and (max-width: $breakpoint-x-small) {
@@ -80,12 +80,12 @@
   $button-background-color: $color-x-light,
   $button-text-color: $color-x-dark,
   $button-disabled-background-color: $color-transparent,
-  $button-disabled-border-color: $color-mid,
-  $button-border-color: $color-mid,
-  $button-hover-background-color: darken($color-x-light, 10%),
-  $button-hover-border-color: $color-mid,
-  $button-active-background-color: darken($color-x-light, 15%),
-  $button-active-border-color: $color-mid
+  $button-disabled-border-color: $colors--light-theme--border-high-contrast,
+  $button-border-color: $colors--light-theme--border-high-contrast,
+  $button-hover-background-color: darken($color-x-light, $hover-darken-percentage),
+  $button-hover-border-color: $colors--light-theme--border-high-contrast,
+  $button-active-background-color: darken($color-x-light, $active-darken-percentage),
+  $button-active-border-color: $colors--light-theme--border-high-contrast
 ) {
   background-color: $button-background-color;
   border-color: $button-border-color;
@@ -95,16 +95,15 @@
     color: $button-text-color;
   }
 
-  &:active,
-  &:active:hover {
-    background-color: $button-active-background-color;
-    border-color: $button-active-border-color;
-    transition-duration: 0s;
-  }
-
   &:hover {
     background-color: $button-hover-background-color;
     border-color: $button-hover-border-color;
+  }
+
+  &:active {
+    background-color: $button-active-background-color;
+    border-color: $button-active-border-color;
+    transition-duration: 0s;
   }
 
   &:disabled,
