--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -25,7 +25,7 @@
     // stylelint-enable property-no-vendor-prefix
 
     background-color: $color-x-light;
-    border: 1px solid $color-mid;
+    border: 1px solid $colors--light-theme--border-high-contrast;
     border-radius: 0;
     box-shadow: inset 0 1px 1px $color-input-shadow;
     color: $color-dark;
@@ -46,22 +46,12 @@
       padding-top: calc(#{$spv-nudge - $spv-inner--x-small} - 1px);
     }
 
-    &:active {
-      border-color: $color-mid-dark;
-      color: $color-dark;
-      outline: none;
-    }
-
     &::-webkit-placeholder,
     &::-ms-placeholder,
     &:-ms-placeholder,
     &::placeholder {
       color: $color-mid-dark;
       opacity: 1;
-    }
-
-    &:focus {
-      border-color: $color-mid-dark;
     }
 
     &[disabled],
@@ -84,7 +74,7 @@
   // Disabled form elements
   %vf-disabled-element {
     cursor: not-allowed;
-    opacity: 0.5;
+    opacity: $disabled-element-opacity;
   }
 
   // Readonly form elements
@@ -221,7 +211,7 @@
   // Fieldset styles
   fieldset {
     background-color: $color-light;
-    border: 1px solid $color-mid-light;
+    border: 1px solid $colors--light-theme--border-high-contrast;
     border-radius: $border-radius;
     color: $color-dark;
     margin-bottom: $spv-outer--scaleable;
