--- a/templates/docs/examples/templates/tick-element-comparison.html
+++ b/templates/docs/examples/templates/tick-element-comparison.html
@@ -2,66 +2,137 @@
 {% block title %}Forms / Tick elements{% endblock %}
 
 {% block content %}
-<div class="p-strip is-shallow u-no-padding--top">
-  <div class="row">
-  </div>
-  <div class="row">
-    <div class="col-3">
-      <form action="">
+<!-- <div class="p-strip--dark">
+  <div class="p-strip is-shallow u-no-padding--top">
+    <div class="row">
+    </div>
+    <div class="row">
+      <div class="col-3">
+        <form action="">
+          <input type="checkbox" id="checkExample2">
+          <label for="checkExample2">Checkbox option 2</label>
+          <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
+          <label for="Radio1">Radio option 1</label>
+        </form>
+      </div>
+      <div class="col-3">
+        <form action="">
+          <input type="text">
+          <button>Button</button>
+          <button>Button</button>
+          <button>Button</button>
+          <button disabled>Button</button>
+        </form>
+      </div>
+      <div class="col-3">
+        <form action="">
+          <input type="text">
+          <input type="checkbox" id="checkExample1" checked>
+          <label for="checkExample1">Checkbox option 1</label>
+        </form>
+      </div>
+      <div class="col-3">
+        <form action="">
+          <input type="text">
+          <select name="" id=""></select>
+        </form>
+      </div>
+      <div class="col-3">
         <input type="checkbox" id="checkExample2">
         <label for="checkExample2">Checkbox option 2</label>
         <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
         <label for="Radio1">Radio option 1</label>
-      </form>
+        <input type="radio" name="RadioOptions" id="Radio2" value="option2">
+        <label for="Radio2">Radio option 2</label>
+      </div>
+      <div class="col-3">
+        <input type="radio" name="RadioOptions" id="Radio3" value="option3" >
+        <label for="Radio3">Radio option 3</label>
+        <input type="radio" name="RadioOptions" id="Radio4" value="option4">
+        <label for="Radio4">Radio option 4</label>
+        <input type="checkbox" id="checkExample3" checked>
+        <label for="checkExample3">Checkbox option 3</label>
+        <input type="checkbox" id="checkExample4">
+        <label for="checkExample4">Checkbox option 4</label>
+      </div>
     </div>
-    <div class="col-3">
-      <form action="">
-        <input type="text">
-        <button>Button</button>
-        <button>Button</button>
-        <button>Button</button>
-        <button>Button</button>
-      </form>
+  </div>
+  <div class="p-strip is-shallow u-no-padding--top">
+    <div class="row">
+      <hr>
+      <p>In padded containers (table cells, some list items), checkboxes and labels need to align with text not wrapped in a tag. Use class "is-inline-label" on the label to achieve that.</p>
     </div>
-    <div class="col-3">
-      <form action="">
-        <input type="text">
-        <input type="checkbox" id="checkExample1" checked>
-        <label for="checkExample1">Checkbox option 1</label>
-      </form>
+  </div>
+
+</div> -->
+
+<div class="p-strip">
+  <div class="p-strip is-shallow u-no-padding--top">
+    <div class="row">
     </div>
-    <div class="col-3">
-      <form action="">
-        <input type="text">
-        <select name="" id=""></select>
-      </form>
+    <div class="row">
+      <div class="col-3">
+        <form action="">
+          <input type="checkbox" id="checkExample2">
+          <label for="checkExample2">Checkbox option 2</label>
+          <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
+          <label for="Radio1">Radio option 1</label>
+        </form>
+      </div>
+      <div class="col-3">
+        <form action="">
+          <input type="text">
+          <button>Button</button>
+          <button class="p-button--neutral">Button</button>
+          <button class="p-button--negative">Button</button>
+          <a class="p-button--negative">Button</a>
+          <button class="p-button--positive">Button</button>
+          <button class="p-button--positive" disabled>Button</button>
+          <button>Button</button>
+          <button disabled>Button</button>
+        </form>
+      </div>
+      <div class="col-3">
+        <form action="">
+          <input type="text">
+          <input type="checkbox" id="checkExample1" checked>
+          <label for="checkExample1">Checkbox option 1</label>
+        </form>
+      </div>
+      <div class="col-3">
+        <form action="">
+          <input type="text" placeholder="Enter email">
+          <select name="" id=""></select>
+        </form>
+      </div>
+      <div class="col-3">
+        <input type="checkbox" id="checkExample2">
+        <label for="checkExample2">Checkbox option 2</label>
+        <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
+        <label for="Radio1">Radio option 1</label>
+        <input type="radio" name="RadioOptions" id="Radio2" value="option2">
+        <label for="Radio2">Radio option 2</label>
+      </div>
+      <div class="col-3">
+        <input type="radio" name="RadioOptions" id="Radio3" value="option3" >
+        <label for="Radio3">Radio option 3</label>
+        <input type="radio" name="RadioOptions" id="Radio4" value="option4">
+        <label for="Radio4">Radio option 4</label>
+        <input type="checkbox" id="checkExample3" checked>
+        <label for="checkExample3">Checkbox option 3</label>
+        <input type="checkbox" id="checkExample4">
+        <label for="checkExample4">Checkbox option 4</label>
+      </div>
     </div>
-    <div class="col-3">
-      <input type="checkbox" id="checkExample2">
-      <label for="checkExample2">Checkbox option 2</label>
-      <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
-      <label for="Radio1">Radio option 1</label>
-      <input type="radio" name="RadioOptions" id="Radio2" value="option2">
-      <label for="Radio2">Radio option 2</label>
-    </div>
-    <div class="col-3">
-      <input type="radio" name="RadioOptions" id="Radio3" value="option3" >
-      <label for="Radio3">Radio option 3</label>
-      <input type="radio" name="RadioOptions" id="Radio4" value="option4">
-      <label for="Radio4">Radio option 4</label>
-      <input type="checkbox" id="checkExample3" checked>
-      <label for="checkExample3">Checkbox option 3</label>
-      <input type="checkbox" id="checkExample4">
-      <label for="checkExample4">Checkbox option 4</label>
+  </div>
+  <div class="p-strip is-shallow u-no-padding--top">
+    <div class="row">
+      <hr>
+      <p>In padded containers (table cells, some list items), checkboxes and labels need to align with text not wrapped in a tag. Use class "is-inline-label" on the label to achieve that.</p>
     </div>
   </div>
 </div>
-<div class="p-strip is-shallow u-no-padding--top">
-  <div class="row">
-    <hr>
-    <p>In padded containers (table cells, some list items), checkboxes and labels need to align with text not wrapped in a tag. Use class "is-inline-label" on the label to achieve that.</p>
-  </div>
-</div>
+
 <div class="p-strip is-shallow u-no-padding--top">
   <div class="u-fixed-width">
     <table class="p-table--mobile-card">
