Use aria-current to select current page in side navigation

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -432,12 +432,14 @@
     }
 
     &:hover,
-    &.is-active {
+    &.is-active,
+    &[aria-current] {
       background: $color-sidenav-item-background-highlight;
       color: $color-sidenav-text-active;
     }
 
-    &.is-active {
+    &.is-active,
+    &[aria-current] {
       @include vf-highlight-bar($color-sidenav-item-border-highlight, left);
     }
   }
@@ -506,12 +508,14 @@
     }
 
     &:hover,
-    &.is-active {
+    &.is-active,
+    &[aria-current] {
       background: $color-sidenav-item-background-highlight;
       color: $color-sidenav-text-active;
     }
 
-    &.is-active {
+    &.is-active,
+    &[aria-current] {
       @include vf-highlight-bar($color-sidenav-item-border-highlight, left);
     }
   }
