scope margin-left on p-stepped-list__content  to stepped list only

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -187,7 +187,7 @@ $spv-list-item--inner: null;
         }
       }
 
-      & + .p-stepped-list__content {
+      .p-stepped-list & + .p-stepped-list__content {
         @media (max-width: $breakpoint-heading-threshold) {
           margin-left: $bullet-width-mobile + $sph-inner;
         }
