move focus outline into p-navigation__link

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -17,6 +17,7 @@ $lightness-threshold: 70;
   %navigation-link {
     $properties: #{background-color, color, opacity};
     @include vf-animation($properties);
+    @include vf-focus;
 
     display: block;
     line-height: map-get($line-heights, default-text);
