Fix side navigation overlapping with global nav

--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -2,6 +2,8 @@
 {% block title %}Documentation{% endblock %}
 
 {% block content %}
+{% include "docs/examples/layouts/_global-nav.html" %}
+
 <header id="navigation" class="p-navigation is-dark">
   <div class="p-navigation__row">
     <div class="p-navigation__banner">
