Use small external link icon instead

--- a/scss/_base_icon-definitions.scss
+++ b/scss/_base_icon-definitions.scss
@@ -60,7 +60,7 @@ $social-icon-size: map-get($icon-sizes, heading-icon--small);
 }
 
 @mixin vf-icon-external-link($color) {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='16' height='16'%3E%3Cdefs%3E%3Cpath id='a' d='M0 0h10v10H0z'/%3E%3C/defs%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='#{vf-url-friendly-color($color)}' d='M9 1v1.5h3.19L6.439 8.25 7.5 9.311l5.75-5.75V6.75h1.5V1z'/%3E%3Cg transform='translate(2 3.75)'%3E%3Cmask id='b' fill='%23fff'%3E%3Cuse xlink:href='%23a'/%3E%3C/mask%3E%3Cpath fill='#{vf-url-friendly-color($color)}' d='M8.5 4.53V8c0 .275-.225.5-.5.5H2a.501.501 0 01-.5-.5V2a.5.5 0 01.5-.5h3.166L6.667 0H2a2 2 0 00-2 2v6a2 2 0 002 2h6a2 2 0 002-2V3.03l-1.5 1.5z' mask='url(%23b)'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.157 3l-1.5 1.5H6a.5.5 0 00-.492.41L5.5 5v5a.5.5 0 00.41.492L6 10.5h5a.5.5 0 00.492-.41L11.5 10V8.538l1.5-1.5V10a2 2 0 01-2 2H6a2 2 0 01-2-2V5a2 2 0 012-2h3.157zm5.593-1.75V6h-1.5V3.81L8.5 8.56 7.44 7.5l4.748-4.75H10v-1.5h4.75z' fill='#{vf-url-friendly-color($color)}' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 @mixin vf-icon-drag($color) {
