Deprecate p-icon--question, update relevant documentation and examples.

--- a/scss/_base_icon-definitions.scss
+++ b/scss/_base_icon-definitions.scss
@@ -96,7 +96,9 @@ $social-icon-size: map-get($icon-sizes, heading-icon--small);
 }
 
 @mixin vf-icon-question($color) {
-  @include vf-icon-help($color);
+  @include deprecate('3.0.0', 'Use the `vf-icon-help` mixin instead') {
+    @include vf-icon-help($color);
+  }
 }
 
 @mixin vf-icon-spinner($color) {
