--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -64,7 +64,7 @@
               {{ side_nav_item("/docs/patterns/contextual-menu", "Contextual menu") }}
               {{ side_nav_item("/docs/patterns/grid", "Grid") }}
               {{ side_nav_item("/docs/patterns/heading-icon", "Heading icon") }}
-              {{ side_nav_item("/docs/patterns/icons", "Icons") }}
+              {{ side_nav_item("/docs/patterns/icons", "Icons", "updated") }}
               {{ side_nav_item("/docs/patterns/images", "Images") }}
               {{ side_nav_item("/docs/patterns/inline-images", "Inline images") }}
               {{ side_nav_item("/docs/patterns/labels", "Labels") }}
@@ -75,7 +75,7 @@
               {{ side_nav_item("/docs/patterns/media-object", "Media object") }}
               {{ side_nav_item("/docs/patterns/modal", "Modal") }}
               {{ side_nav_item("/docs/patterns/muted-heading", "Muted heading") }}
-              {{ side_nav_item("/docs/patterns/navigation", "Navigation", "updated") }}
+              {{ side_nav_item("/docs/patterns/navigation", "Navigation") }}
               {{ side_nav_item("/docs/patterns/notification", "Notifications") }}
               {{ side_nav_item("/docs/patterns/pagination", "Pagination") }}
               {{ side_nav_item("/docs/patterns/pull-quote", "Quotes") }}
