Update spinner icon

--- a/scss/_base_icon-definitions.scss
+++ b/scss/_base_icon-definitions.scss
@@ -102,7 +102,7 @@ $social-icon-size: map-get($icon-sizes, heading-icon--small);
 }
 
 @mixin vf-icon-spinner($color) {
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='#{vf-url-friendly-color($color)}' d='M12.35 11.366l1.068 1.067A6.987 6.987 0 018 15c-2.184 0-4.134-1-5.418-2.567l1.068-1.067C4.656 12.664 6.23 13.5 8 13.5s3.344-.836 4.35-2.134zM6.998 1.071v1.52a5.502 5.502 0 00-4.296 6.892l-1.178 1.179a7.002 7.002 0 015.474-9.59zM15 8c0 .942-.186 1.841-.524 2.662l-1.178-1.179a5.501 5.501 0 00-4.3-6.893L9 1.07A7.001 7.001 0 0115 8z' fill-rule='evenodd'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 13.5a5.488 5.488 0 004.183-1.929l1.317.76A6.988 6.988 0 018 15a6.988 6.988 0 01-5.5-2.669l1.316-.76A5.488 5.488 0 008 13.5zM6.999 1.071v1.52A5.502 5.502 0 002.815 9.84L1.5 10.6A7.002 7.002 0 016.764 1.11l.235-.038zM15 8c0 .918-.177 1.795-.498 2.6l-1.317-.761A5.502 5.502 0 009 2.59V1.07c3.392.485 6 3.403 6 6.929z' fill='#{vf-url-friendly-color($color)}' fill-rule='nonzero'/%3E%3C/svg%3E");
 }
 
 @mixin vf-icon-facebook {
